--- a/vuerouter/package.json
+++ b/vuerouter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-tmp",
+  "name": "vuerouter",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "fesoa <fernandofesoa@gmail.com>",
